# nettverkprosjekt

./: CMakeLists.txt  main.cpp  readme.md
client/: event.h  eventPool.cpp  eventPool.h  interpolation.h  netClient.cpp
models/: error.h  packet.h
server/: connectionManager.h  eventProcessor.cpp  eventProcessor.h  netServer.cpp  serverEvent.h
